# aceforth

./: .gitignore  Cargo.toml  README.md
aceforth/: Cargo.toml
aceforth/src/: main.rs
aceforthgram/: Cargo.toml
aceforthgram/resources/: BorFatherConfiguration.txt  intro.txt
aceforthgram/src/: app.rs  main.rs
aceforthlib/: Cargo.toml
aceforthlib/src/: ace_machine.rs  characters.rs  display.rs  lib.rs  runner.rs
notepad/: execution.txt  inputbuffer.txt
resources/: JupiterACE_ROM_Disassembly.asm  JupiterACE_ROM_Disassembly.txt  initialstate.sav  jupiter ace.lst
src/: ace_machine.rs  characters.rs  errors.rs  main.rs  notes.txt  runner.rs
