[workspace]
members = [
    "aceforth",
    "aceforthgram",
    "aceforthlib"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ivan Izaguirre <ivanizag@gmail.com>"]
edition = "2021"
repository = "https://github.com/ivanizag/aceforth"

[profile.dist]
inherits = "release"
lto = "thin"
