[package]
name = "aceforthgram"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aceforthlib = { path = "../aceforthlib" }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

